# ontario-data-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  how_to.md  pyproject.toml
.claude/commands/: release.md
.claude/skills/: refresh-site-examples.md
.claude/skills/generating-smoke-tests/: SKILL.md
.claude/skills/refresh-site-examples/: SKILL.md
.github/workflows/: pages.yml
_site/: index.html
bugs/: 001-tools-not-visible.md  002-prompts-hardcoded-ontario-portal.md  003-lifespan-state-private-api.md  004-version-not-bumped.md  005-fastmcp-banner-on-stderr.md  006-no-main-module.md  007-mcp-json-vs-readme-mismatch.md  008-tasks-capability-compat.md  CONCLUSION.md  README.md  fastmcp-3.0-migration-notes.md  quick-diagnostics.sh  tools-not-showing-investigation.md
docs/plans/: 2026-02-12-marketing-site-design.md  2026-02-12-marketing-site-implementation.md  2026-02-12-ontario-data-mcp-design.md  2026-02-12-ontario-data-mcp-implementation.md  2026-02-19-arcgis-hub-adapter-design.md
docs/superpowers/specs/: 2026-03-10-validate-results-design.md
plans/: docs-audit.md  known_issues.md  release-review.md
site/: carousel.js  examples.json  index.html  sql-highlight.js
src/ontario_data/: __main__.py  arcgis_client.py  cache.py  ckan_client.py  cli.py  formatting.py  logging_config.py  portals.py  prompts.py  protocols.py  resources.py  server.py  staleness.py  utils.py  validate_results.py
src/ontario_data/tools/: analytics.py  discovery.py  geospatial.py  metadata.py  quality.py  querying.py  retrieval.py  validation.py
tests/: conftest.py  test_arcgis_client.py  test_arcgis_smoke.py  test_arcgis_tool_behavior.py  test_cache.py  test_ckan_client.py  test_ckan_retry.py  test_cli.py  test_docs_accuracy.py  test_formatting.py  test_integration.py  test_live_smoke.py  test_portal_routing.py  test_server.py  test_sql_safety.py  test_staleness.py  test_tools_unit.py  test_utils.py  test_validate_results.py
