[project]
name = "ontario-data-mcp"
version = "0.1.6"
description = "MCP server for Ontario Open Data Catalogue (beta)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "coverage>=7.13.4",
]

[project.scripts]
ontario-data-mcp = "ontario_data.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontario_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: hits real APIs (deselected by default, run with --live)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "respx>=0.22.0",
]
